// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with object-config: aliased named import 1`] = `
"
import { myFunc as myAliasFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import myAliasFunc from './tests/testmodule/myFunc.js';
"
`;

exports[`with object-config: aliased namespace import 1`] = `
"
import { thangs } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import * as thangs from './tests/testmodule/constants.js';
"
`;

exports[`with object-config: common js default import 1`] = `
"
import React from './commonjsmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from './commonjsmodule';
"
`;

exports[`with object-config: common js default with named import 1`] = `
"
import React, { Component } from './commonjsmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import React, { Component } from './commonjsmodule';
"
`;

exports[`with object-config: default import 1`] = `
"
import myFunc from 'testmodule/myFunc'

      ↓ ↓ ↓ ↓ ↓ ↓

import myFunc from 'testmodule/myFunc';
"
`;

exports[`with object-config: default import with multiple named import 1`] = `
"
import init, { myFunc, myOtherFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import init from './tests/testmodule/index.js';
import myFunc from './tests/testmodule/myFunc.js';
import { myOtherFunc } from './tests/testmodule/myOtherFunc.js';
"
`;

exports[`with object-config: glob import 1`] = `
"
import * as testmodule from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import * as testmodule from 'testmodule';
"
`;

exports[`with object-config: import export in single line 1`] = `
"
import { myInlineExport } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import { myInlineFunc as myInlineExport } from './tests/testmodule/myOtherFunc.js';
"
`;

exports[`with object-config: multiple named imports 1`] = `
"
import { myFunc, myOtherFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import myFunc from './tests/testmodule/myFunc.js';
import { myOtherFunc } from './tests/testmodule/myOtherFunc.js';
"
`;

exports[`with object-config: nested named import 1`] = `
"
import { myOtherFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import { myOtherFunc } from './tests/testmodule/myOtherFunc.js';
"
`;

exports[`with object-config: single named import 1`] = `
"
import { myFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import myFunc from './tests/testmodule/myFunc.js';
"
`;

exports[`with object-config: unresolved default import 1`] = `
"
import React from 'reacty'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from 'reacty';
"
`;

exports[`with object-config: unresolved default import with named import 1`] = `
"
import React, { Component } from 'reacty'

      ↓ ↓ ↓ ↓ ↓ ↓

import React, { Component } from 'reacty';
"
`;

exports[`with path-to-config: aliased named import 1`] = `
"
import { myFunc as myAliasFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import myAliasFunc from './tests/testmodule/myFunc.js';
"
`;

exports[`with path-to-config: aliased namespace import 1`] = `
"
import { thangs } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import * as thangs from './tests/testmodule/constants.js';
"
`;

exports[`with path-to-config: common js default import 1`] = `
"
import React from './commonjsmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from './commonjsmodule';
"
`;

exports[`with path-to-config: common js default with named import 1`] = `
"
import React, { Component } from './commonjsmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import React, { Component } from './commonjsmodule';
"
`;

exports[`with path-to-config: default import 1`] = `
"
import myFunc from 'testmodule/myFunc'

      ↓ ↓ ↓ ↓ ↓ ↓

import myFunc from 'testmodule/myFunc';
"
`;

exports[`with path-to-config: default import with multiple named import 1`] = `
"
import init, { myFunc, myOtherFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import init from './tests/testmodule/index.js';
import myFunc from './tests/testmodule/myFunc.js';
import { myOtherFunc } from './tests/testmodule/myOtherFunc.js';
"
`;

exports[`with path-to-config: glob import 1`] = `
"
import * as testmodule from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import * as testmodule from 'testmodule';
"
`;

exports[`with path-to-config: import export in single line 1`] = `
"
import { myInlineExport } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import { myInlineFunc as myInlineExport } from './tests/testmodule/myOtherFunc.js';
"
`;

exports[`with path-to-config: multiple named imports 1`] = `
"
import { myFunc, myOtherFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import myFunc from './tests/testmodule/myFunc.js';
import { myOtherFunc } from './tests/testmodule/myOtherFunc.js';
"
`;

exports[`with path-to-config: nested named import 1`] = `
"
import { myOtherFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import { myOtherFunc } from './tests/testmodule/myOtherFunc.js';
"
`;

exports[`with path-to-config: single named import 1`] = `
"
import { myFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import myFunc from './tests/testmodule/myFunc.js';
"
`;

exports[`with path-to-config: unresolved default import 1`] = `
"
import React from 'reacty'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from 'reacty';
"
`;

exports[`with path-to-config: unresolved default import with named import 1`] = `
"
import React, { Component } from 'reacty'

      ↓ ↓ ↓ ↓ ↓ ↓

import React, { Component } from 'reacty';
"
`;
